# effective-parakeet

.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: compiler.rs  filesystem.rs  mod.rs  projects.rs  system.rs  terminal.rs  window.rs
src-tauri/src/models/: mod.rs  types.rs
src-tauri/src/services/: compiler_service.rs  file_service.rs  mod.rs  monitor_service.rs  terminal_service.rs  trash_service.rs
src-tauri/src/utils/: error_handler.rs  mod.rs  path_validator.rs
